Beginning of improvements to the page

--- a/index.html
+++ b/index.html
@@ -76,42 +76,6 @@
                     </button>
                 </section>
 
-                <section class="col-12 section section-people">
-                    <h2 class="text-center mb-2" data-language="titlePerson">Persons</h2>
-                    <p class="text-justify mb-3" data-language="contentPerson">
-                        These persons have done a very positive impact in my life, appearing and
-                        teaching me that for more complicated than sees the life and the things,
-                        always with effort, dedication, humility and believing in one itself there
-                        is nothing that could not be achieved.
-                    </p>
-                    <div class="row">
-                        <div class="col-12 col-sm-4 mb-3">
-                            <img class="img-fluid img-people" src="./img/people/alberteinstein.jpg" alt="Albert Einstein">
-                            <h6 class="font-weight-bold text-center">Albert Einstein</h6>
-                        </div>
-                        <div class="col-12 col-sm-4 mb-3">
-                            <img class="img-fluid img-people" src="./img/people/ladygaga.jpg" alt="Lady Gaga">
-                            <h6 class="font-weight-bold text-center">Lady Gaga</h6>
-                        </div>
-                        <div class="col-12 col-sm-4 mb-3">
-                            <img class="img-fluid img-people" src="./img/people/alanturing.jpg" alt="Alan Turing">
-                            <h6 class="font-weight-bold text-center">Alan Turing</h6>
-                        </div>
-                        <div class="col-12 col-sm-4 mb-3">
-                            <img class="img-fluid img-people" src="./img/people/nelsonmandela.jpg" alt="Nelson Mandela">
-                            <h6 class="font-weight-bold text-center">Nelson Mandela</h6>
-                        </div>
-                        <div class="col-12 col-sm-4 mb-3">
-                            <img class="img-fluid img-people" src="./img/people/marylou.jpeg" alt="Mary Lou">
-                            <h6 class="font-weight-bold text-center">Mary Lou</h6>
-                        </div>
-                        <div class="col-12 col-sm-4 mb-3">
-                            <img class="img-fluid img-people" src="./img/people/johnsteinbeck.jpg" alt="John Steinbeck">
-                            <h6 class="font-weight-bold text-center">John Steinbeck</h6>
-                        </div>
-                    </div>
-                </section>
-
                 <section class="col-12 section section-skill">
                     <h2 class="text-center title-skill" data-language="titleKnowledge">Knowledge</h2>
                     <div class="row">
@@ -161,6 +125,41 @@
                                 <li class="swatch-item" data-color="#649e58">Nodejs</li>
                                 <li class="swatch-item font-weight-bold" data-color="#29253e" data-language="titleSwatch3">Learning</li>
                             </ul>
+                        </div>
+                    </div>
+                </section>
+
+                <section class="col-12 section section-people">
+                    <h2 class="text-center mb-2" data-language="titlePeople">People</h2>
+                    <p class="text-justify mb-3" data-language="contentPeople">
+                        These persons have done a very positive impact in my life, teaching me that
+                        for more complicated than sees the life and the things, always with effort,
+                        dedication, humility and believing in one itself there is nothing that could not be achieved.
+                    </p>
+                    <div class="row">
+                        <div class="col-12 col-sm-4 mb-3">
+                            <img class="img-fluid img-people" src="./img/people/alberteinstein.jpg" alt="Albert Einstein">
+                            <h6 class="font-weight-bold text-center">Albert Einstein</h6>
+                        </div>
+                        <div class="col-12 col-sm-4 mb-3">
+                            <img class="img-fluid img-people" src="./img/people/ladygaga.jpg" alt="Lady Gaga">
+                            <h6 class="font-weight-bold text-center">Lady Gaga</h6>
+                        </div>
+                        <div class="col-12 col-sm-4 mb-3">
+                            <img class="img-fluid img-people" src="./img/people/alanturing.jpg" alt="Alan Turing">
+                            <h6 class="font-weight-bold text-center">Alan Turing</h6>
+                        </div>
+                        <div class="col-12 col-sm-4 mb-3">
+                            <img class="img-fluid img-people" src="./img/people/nelsonmandela.jpg" alt="Nelson Mandela">
+                            <h6 class="font-weight-bold text-center">Nelson Mandela</h6>
+                        </div>
+                        <div class="col-12 col-sm-4 mb-3">
+                            <img class="img-fluid img-people" src="./img/people/marylou.jpeg" alt="Mary Lou">
+                            <h6 class="font-weight-bold text-center">Mary Lou</h6>
+                        </div>
+                        <div class="col-12 col-sm-4 mb-3">
+                            <img class="img-fluid img-people" src="./img/people/johnsteinbeck.jpg" alt="John Steinbeck">
+                            <h6 class="font-weight-bold text-center">John Steinbeck</h6>
                         </div>
                     </div>
                 </section>
