Change of about me

--- a/index.html
+++ b/index.html
@@ -48,14 +48,12 @@
                 <section class="col-12 section section-biography">
                     <h2 data-language="about" class="text-center mb-2">About me</h2>
                     <p data-language="aboutContent" class="text-justify">
-                        Hi, my name is <strong>Henry Zarza</strong>, I'm currently in tenth semester of computer engineering 
-                        at Politéctico Colombiano Jaime Isaza Cadavid. I live in Medellín, Colombia.
-                        I'm passionate and enthusiastic about coding and algorithms, I especially like web development due I
-                        consider that's a space where I can exploit and let fly my creativity and imagination.
-                        My favorite programming language is <strong>JavaScript</strong>, in my opinion it's very
-                        flexible, robust and has great projection so it lends itself to work in many fields of computer science. <br>
-                        In my free time what I like to do the most is learn new things, look for interesting webpages,
-                        practice yoga, do exercise, read, listen music, walking and watch series.
+                        Hi! my name is <strong>Henry Zarza</strong>, I'm student of tenth semester of computer engineering 
+                        at Politéctico Colombiano Jaime Isaza Cadavid, web developer and student of languages. I live in Medellín,
+                        Colombia. I love the programming, algorithms, the languages, the music, the series, read, yoga and walking. <br />
+                        I like the web development because I consider that's a space where I can exploit and let fly my creativity
+                        and imagination. My favorite programming language is <strong>JavaScript</strong>, in my opinion it's very
+                        flexible, robust and has great projection so it lends itself to work in many fields of computer science.
                     </p>
                     <button class="btn btn-ouline-info btn-social"> <span data-language="btnSocial">Meet me in</span>
                         <a class="btn" target="_blank" href="https://github.com/henryzarza" title="GitHub">
